feat:complete TrainingAttendance service and Initailization test